--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -22,13 +22,17 @@
             </div>
         </div>
     </header>
+
+    <container class="menu">
+    </container>
     
     <footer class="footer">
         <div class="footer__tasks">
             <h2 class="footer__active-tasks">Active tasks: <span>N</span></h2>
             <h3 class="footer__finished-tasks">Finished tasks: <span>M</span></h3>
         </div>
-        <h4 class="footer__author">Kanban board by <span>NAME</span>, <span>YEAR</span></h4>
+        <h4 class="footer__author">Kanban board by <span>alina aprel</span>, <span>2021</span></h4>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
