--- a/src/ex10_html-css-fundamentals-part2/task-03.html
+++ b/src/ex10_html-css-fundamentals-part2/task-03.html
@@ -14,53 +14,53 @@
             <div class="table__title">phone</div>
             <div class="table__title">mail</div>
             <div class="table__title">out standing</div>
-        <div class="table__rows">
-            <div class="table__row"><span>jhonny aviony</span></div>
-            <div class="table__row"><span>(740) 841-7566</span></div>
-            <div class="table__row"><span>info@johnyaviony.com</span></div>
-            <div class="table__row"><span>$ 2.400.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">jhonny aviony</div>
+            <div class="table__row">(740) 841-7566</div>
+            <div class="table__row">info@johnyaviony.com</div>
+            <div class="table__row">$ 2.400.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>mark hammock</span></div>
-            <div class="table__row"><span>(800) 950-4511</span></div>
-            <div class="table__row"><span>markhammocklgmall.com</span></div>
-            <div class="table__row"><span>$ 700</span></div>
+        <div class="table__cell">
+            <div class="table__row">mark hammock</div>
+            <div class="table__row">(800) 950-4511</div>
+            <div class="table__row">markhammocklgmall.com</div>
+            <div class="table__row">$ 700</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>rlchlcl cross</span></div>
-            <div class="table__row"><span>(322) 841-7566</span></div>
-            <div class="table__row"><span>crossstation@gmail.com</span></div>
-            <div class="table__row"><span>$ 1.755.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">rlchlcl cross</div>
+            <div class="table__row">(322) 841-7566</div>
+            <div class="table__row">crossstation@gmail.com</div>
+            <div class="table__row">$ 1.755.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>flinn's shack</span></div>
-            <div class="table__row"><span>(740) 841-7566</span></div>
-            <div class="table__row"><span>help@flinns.com</span></div>
-            <div class="table__row"><span>$ 26.850.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">flinn's shack</div>
+            <div class="table__row">(740) 841-7566</div>
+            <div class="table__row">help@flinns.com</div>
+            <div class="table__row">$ 26.850.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>filip justic</span></div>
-            <div class="table__row"><span>(322) 841-7566</span></div>
-            <div class="table__row"><span>filip.justic@gmail.com</span></div>
-            <div class="table__row"><span>$ 642.214.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">filip justic</div>
+            <div class="table__row">(322) 841-7566</div>
+            <div class="table__row">filip.justic@gmail.com</div>
+            <div class="table__row">$ 642.214.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>summer evans</span></div>
-            <div class="table__row"><span>(800) 950-4511</span></div>
-            <div class="table__row"><span>summer@gmail.com</span></div>
-            <div class="table__row"><span>$ 700.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">summer evans</div>
+            <div class="table__row">(800) 950-4511</div>
+            <div class="table__row">summer@gmail.com</div>
+            <div class="table__row">$ 700.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>marco s. diaz</span></div>
-            <div class="table__row"><span>(800) 800-1111</span></div>
-            <div class="table__row"><span>s.diaz@gmail.com</span></div>
-            <div class="table__row"><span>$ 65.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">marco s. diaz</div>
+            <div class="table__row">(800) 800-1111</div>
+            <div class="table__row">s.diaz@gmail.com</div>
+            <div class="table__row">$ 65.00</div>
         </div>
-        <div class="table__rows">
-            <div class="table__row"><span>ricky stwerat</span></div>
-            <div class="table__row"><span>(800) 800-2222</span></div>
-            <div class="table__row"><span>r.stwerat@gmail.com</span></div>
-            <div class="table__row"><span>$ 2.400.00</span></div>
+        <div class="table__cell">
+            <div class="table__row">ricky stwerat</div>
+            <div class="table__row">(800) 800-2222</div>
+            <div class="table__row">r.stwerat@gmail.com</div>
+            <div class="table__row">$ 2.400.00</div>
         </div>
     </container>
 </body>
