--- a/src/ex17_js_components/src/index.html
+++ b/src/ex17_js_components/src/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./src/index.css" rel="stylesheet" type="text/css">
-    <link href="./src/vendor/normalize.css" rel="stylesheet" type="text/css">
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="./vendor/normalize.css" rel="stylesheet" type="text/css">
     <title>Kanban</title>
 </head>
 <body>
     <header class="header">
         <div class="header__logo">
-            <img class="header__image-logo" src="./src/images/logo.svg" alt="">
+            <img class="header__image-logo" src="./images/logo.svg" alt="">
             <h1 class="header__title">Awesome Kanban Board</h1>
         </div>
         <div class="header__options">
-            <button class="header__button"><img src="./src/images/add.svg"><span>Create new list</span></button>
+            <button class="header__button"><img src="./images/add.svg"><span>Create new list</span></button>
             <div class="header__account">
-                <img class="header__image" src="./src/images/user-avatar.svg">
-                <img class="header__arrow" src="./src/images/arrow.svg">
+                <img class="header__image" src="./images/user-avatar.svg">
+                <img class="header__arrow" src="./images/arrow.svg">
             </div>
         </div>
     </header>
@@ -37,11 +37,11 @@
         </div>
         <h4 class="footer__author">Kanban board by <span>alina aprel</span>, <span>2021</span></h4>
     </footer>
-    <script src="src/components/boardsMocks.js"></script>
-    <script src="src/components/TaskList.js"></script>
-    <script src="src/components/Task.js"></script>
-    <script src="src/components/Data.js"></script>
-    <script src="src/components/UserMenu.js"></script>
-    <script src="src/index.js"></script>
+    <script src="components/boardsMocks.js"></script>
+    <script src="components/TaskList.js"></script>
+    <script src="components/Task.js"></script>
+    <script src="components/Data.js"></script>
+    <script src="components/UserMenu.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
