--- a/src/ex17_js_components/src/index.html
+++ b/src/ex17_js_components/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet" type="text/css">
-    <link href="./vendor/normalize.css" rel="stylesheet" type="text/css">
+    <link href="vendor/normalize.css" rel="stylesheet" type="text/css">
     <title>Kanban</title>
 </head>
 <body>
@@ -37,11 +37,11 @@
         </div>
         <h4 class="footer__author">Kanban board by <span>alina aprel</span>, <span>2021</span></h4>
     </footer>
-    <script src="components/boardsMocks.js"></script>
+    <!-- <script src="components/boardsMocks.js"></script>
     <script src="components/TaskList.js"></script>
     <script src="components/Task.js"></script>
     <script src="components/Data.js"></script>
-    <script src="components/UserMenu.js"></script>
-    <script src="index.js"></script>
+    <script src="components/UserMenu.js"></script> -->
+    <script src="script.js" type="module"></script>
 </body>
 </html>
