--- a/src/ex8_html-css-basics/task-04/task-04.html
+++ b/src/ex8_html-css-basics/task-04/task-04.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="task-04.css" rel="stylesheet" type="text/css">
-    <link href="">
     <title>Task 4</title>
+    <style>
+        @import url('./fonts/fonts.css');
+    </style>
 </head>
 <body>
     <container class="page">
